[tool.poetry]
name = "chatbot-python"
version = "0.0.1"
description = "CDP AgentKit Twitter Langchain Chatbot Example"
authors = ["John Peterson <john.peterson@coinbase.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
twitter-langchain = "^0.0.11"
langchain-openai = "^0.3.0"
langgraph = "^0.2.62"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
